# Chatroom-Webpage

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  auth.config.ts  auth.ts  build_web.bat  next-auth.d.ts  package.json
app/: globals.css  layout.tsx  page.tsx
app/chat/: layout.tsx
app/chat/(overview)/: page.tsx
app/chat/[id]/: page.tsx
app/data/seed/: route.ts
app/lib/: actions.tsx  definitions.tsx
app/login/: page.tsx
app/register/: page.tsx
app/seed/: route.ts
app/ui/: button.tsx
chatroom/app/: layout.tsx
chatroom/app/(overview)/: page.tsx
chatroom/app/chat/[id]/: page.tsx
chatroom/app/ui/: fonts.ts
lib/: AccountActions.ts  ConversationActions.ts  actions.ts  definitions.ts  placeholder-data.ts
src/: CMakeLists.txt  main.cpp
ui/: SignOutButton.tsx  friendsHeader.tsx  loginForm.tsx  registerForm.tsx  searchFriends.tsx  sideBar.tsx
ui/chat_elements/: ChatHeader.tsx  chatBubble.tsx  chatMessages.tsx  chatTile.tsx  friendList.tsx  textField.tsx
